fix compiler issues